[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
jieba-rs = "0.7.1"
anyhow = "1.0.95"
scraper = "0.22.0"
once_cell = "1.20.2"

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = "abort" # Abort on panic

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.